fix page spacing

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -38,7 +38,7 @@
   --line-height-label-large: 20px;
   --line-height-label-medium: 16px;
   --line-height-label-small: 16px;
-  --line-height-mstf-headline-large: 1.2;
+  --line-height-mstf-headline-large: 1.1;
 
   --letter-spacing-display-large: -0.25px;
   --letter-spacing-title-medium: 0.15px;
